Fix UI issue and add up vote down vote shower and fix mark attendance only by roll number iiitt account (#76)
